--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,6 +55,8 @@ a { text-decoration:none; }
         position: relative;
         margin: 3rem auto;
         background-color: var(--theme4-medium);
+        height: 200px;
+        min-height: 200px;
 
         &:before {
             content:"";
@@ -69,95 +71,65 @@ a { text-decoration:none; }
 
     .profile-zone .profile-img {
         width:192px;
-        aspect-ratio:1.0;
+        height:192px;
         position: absolute;
         top:50%;
         left:50%;
         transform: translate(-50%, -50%);
         border-radius:50%;
         border: 4px solid var(--theme3-dark);
+        object-fit: cover;
+        object-position: center 20%;
     }
 
     .profile-zone .personal-info {
-        width: 100%;
-        height: 200px;
-        margin: auto;
-        columns: 2;
-        line-height: 250%;
-        padding: 1rem 0;
-        display: grid;
-        grid-template-rows: repeat(5, 40px);
-        grid-template-columns: repeat(2, 50%);
-        grid-auto-flow: column;
+        position: absolute;
+        right: 2rem;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        flex-direction: row;
+        gap: 1.5rem;
+        justify-content: center;
+        align-items: center;
     }
 
     .profile-zone .personal-info span { 
-        color: white;
-        display: inline-flex;
-        font-size: 0;
-        vertical-align: middle;
-        clip-path: inset(0 100% 0 0);
-        transition: font-size .6s ease-in-out, clip-path .4s;
-        transition-delay: 0s, .45s;
-        transition-property: font-size, clip-path;
+        display: none;
     }
 
     .profile-zone .personal-info img {
-        width:20px;
+        width:24px;
         aspect-ratio:1.0;
         cursor: pointer;
         vertical-align: middle;
-        transition: all .75s;
         filter: invert(10%) sepia(4%) saturate(5321%) hue-rotate(201deg) brightness(99%) contrast(90%);
+        transition: all 0.5s;
     }
 
     .profile-zone .personal-info {
+        li {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
         a {
-            display: inline-flex;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             cursor: pointer;
+            text-decoration: none;
 
             &:hover {
                 img {
-                    width: 28px;
+                    transform: scale(1.2);
                     filter: brightness(0) saturate(100%) invert(77%) sepia(47%) saturate(1006%) hue-rotate(358deg) brightness(104%) contrast(105%);
                 }
             }
         }
 
-        li { height: 40px; }
 
-        li:nth-child(n+1):nth-child(-n+5) { 
-            text-align: right; 
-
-            img { 
-                order: 1; 
-                margin-right: 0.5rem;
-            }
-
-            div { order: 2; }
-        }
-
-        li:nth-child(n+6):nth-child(-n+10) { 
-            text-align: left; 
-
-            img { 
-                order: 2; 
-                margin-left: 0.5rem;
-            }
-
-            div { order: 1; }
-        }
-
-        li:nth-child(1) { margin-right: 5.25rem; }
-        li:nth-child(2) { margin-right: 6.25rem; }
-        li:nth-child(3) { margin-right: 6.75rem; }
-        li:nth-child(4) { margin-right: 6.25rem; }
-        li:nth-child(5) { margin-right: 5.25rem; }
-        li:nth-child(6) { margin-left: 5.25rem; }
-        li:nth-child(7) { margin-left: 6.25rem; }
-        li:nth-child(8) { margin-left: 6.75rem; }
-        li:nth-child(9) { margin-left: 6.25rem; }
-        li:nth-child(10) { margin-left: 5.25rem; }
     }
     
     .name-zone { margin-top: -2rem; }
@@ -338,30 +310,20 @@ a { text-decoration:none; }
     #about { 
         margin-bottom: 6rem; 
 
-        .profile-zone { margin:4rem auto; }
+        .profile-zone { 
+            margin: 4rem auto; 
+            height: 256px;
+            min-height: 256px;
+        }
 
-        .profile-zone .profile-img { width:256px; }
+        .profile-zone .profile-img { 
+            width:256px; 
+            height:256px; 
+        }
 
-        .profile-zone .personal-info { min-width: 768px; }
-
-        .profile-zone .personal-info {
-            a:hover{
-                span {
-                    font-size: 1rem;
-                    clip-path: inset(0 0 0 0);
-                };
-            }
-
-            li:nth-child(1) { margin-right: 7.25rem; }
-            li:nth-child(2) { margin-right: 8.25rem; }
-            li:nth-child(3) { margin-right: 8.75rem; }
-            li:nth-child(4) { margin-right: 8.25rem; }
-            li:nth-child(5) { margin-right: 7.25rem; }
-            li:nth-child(6) { margin-left: 7.25rem; }
-            li:nth-child(7) { margin-left: 8.25rem; }
-            li:nth-child(8) { margin-left: 8.75rem; }
-            li:nth-child(9) { margin-left: 8.25rem; }
-            li:nth-child(10) { margin-left: 7.25rem; }
+        .profile-zone .personal-info { 
+            right: 4rem;
+            gap: 2rem;
         }
     }
 
@@ -419,7 +381,7 @@ a { text-decoration:none; }
         display: block;
         position: fixed;
         width: 128px;
-        top: 320px;
+        top: 270px;
         right: 0;
         z-index: 1;
         font-size: 14px;
